# src/models/SimuladoHistory.js
@@ -1,5 +1,11 @@
 const mongoose = require("mongoose");
 
+const alternativeSchema = new mongoose.Schema({
+  letter: { type: String, required: true },
+  text: { type: String, required: true },
+  isCorrect: { type: Boolean, required: true },
+});
+
 const questionSchema = new mongoose.Schema({
   questionId: { type: String, required: true },
   numeroQuestao: { type: Number, required: true },
@@ -8,6 +14,9 @@ const questionSchema = new mongoose.Schema({
   responseTime: { type: Number, required: true },
   userAnswer: { type: String, required: true },
   correctAnswer: { type: String, required: true },
+  title: { type: String, required: false },
+  context: { type: String, required: false },
+  alternatives: [alternativeSchema],
 });
 
 const simuladoHistorySchema = new mongoose.Schema({
