# src/routes/profileRoutes.js
@@ -4,8 +4,8 @@ const authMiddleware = require("../middlewares/authMiddleware");
 
 const router = express.Router();
 
-router.get("/", authMiddleware, getProfile);
-router.put("/", authMiddleware, updateProfile);
+router.get("/me", authMiddleware, getProfile);
+router.put("/update", authMiddleware, updateProfile);
 router.post("/change-password", authMiddleware, changePassword);
 
 module.exports = router;
